--- a/SmartManage/appsettings.json
+++ b/SmartManage/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:servertest410.database.windows.net,1433;Initial Catalog=DatabaseTest;Persist Security Info=False;User ID=zitaoyu;Password=Panda4102013*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:inandoutdbserver1.database.windows.net,1433;Initial Catalog=database01;Persist Security Info=False;User ID=zitaoy;Password=Panda4102013*;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"DefaultConnection": "Server=.;Database=SmartManage;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
 
